# DSDCohortJuly2025

./: .gitignore  README.md  docker-compose.yml  package-lock.json
api/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml  service_pricing.py
api/core/: api.py  asgi.py  settings.py  urls.py
api/orders/: admin.py  models.py  permissions.py  schemas.py  serializers.py  stripe_webhook.py  urls.py  views.py
api/orders/migrations/: 0001_initial.py  0002_remove_profile_supabase_id_alter_order_provider_and_more.py  0003_order_job_alter_order_client_alter_order_id_and_more.py  0004_alter_order_job.py
api/users/: authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/users/management/commands/: backfill_django_users.py
api/users/migrations/: 0001_initial.py  0002_profile_provider_type_profile_role_profile_user_num.py  0003_alter_profile_user_num.py
api/utils/: constants.py  price_dictionary.py  pricing_function.py
users/: models.py
web/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  pricing_methods.py  vite.config.ts
web/src/: App.css  App.tsx  Types.tsx  index.css  main.tsx
web/src/components/: AnnouncementCard.tsx  Button.tsx  ConfirmAndPayButton.tsx  DateTimePicker.tsx  Datepicker.tsx  Footer.tsx  FullSchedule.tsx  HandlePayButton.tsx  HourSchedule.tsx  Navbar.tsx  NavbarAuth.tsx  NavbarPages.tsx  NewNavBar.tsx  ProtectedRoute.tsx  RatingStars.tsx  ReviewComment.tsx  ServiceCard.tsx  ServiceOrderCard.tsx  order-confirmation-page.tsx  order-page.tsx
web/src/types/: enums.ts  (+2 more)
(+25 files in other folders)
